Corrected white space before contact section

--- a/frontend-nanodegree-resume/css/style.css
+++ b/frontend-nanodegree-resume/css/style.css
@@ -18,6 +18,10 @@ h6 {
   overflow: auto;
 }
 
+.container-fluid {
+  padding-bottom: 5px;
+}
+
 .education-entry,
 .work-entry,
 .project-entry,
